fixed pricing page on mobile

--- a/manifest/source/mobile.less
+++ b/manifest/source/mobile.less
@@ -23,13 +23,22 @@
 	.tablet-hide {
 		display: none !important;
 	}
+
+	.pricing {
+		.mobile-responsive h1 {
+			margin-top: 150px;
+		}
+	}
 }
 
 @media (max-width: 980px) {
 	.pricing {
 		padding-left: 0;
 		padding-right: 0;
-		overflow: hidden;
+
+		.mobile-responsive h1 {
+			margin-top: 50px;
+		}
 
 		.table {
 			min-width: 1200px;
@@ -47,7 +56,7 @@
 			position: absolute;
 			cursor: pointer;
 			z-index: 2;
-			top: 350px;
+			top: 500px;
 			padding: 10px 15px 10px 10px;
 			left: 8px;
 			background: none repeat scroll 0% 0% rgba(0, 0, 0, 0.5);
